--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+
+
 /* Simple CSS Reset */
 * {
   margin: 0;
@@ -6,8 +9,8 @@
 }
 
 body {
-  font-family: 'Inter', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 h1, h2, h3 {
-  font-family: 'Playfair Display', serif;
+  font-family: "Playfair Display", serif;
 }
