--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,18 @@ body{
   font-family: "Open Sans", sans-serif;
 }
 
+header h1{
+  text-shadow: 1px 0px 8px #000000;
+}
+
+header p{
+  margin: 20px 0 20px 0;
+}
+
+header h1 span {
+  color: #A0522D;
+}
+
 h1, h2, h3 {
   font-family: "Montserrat", sans-serif;
   font-weight: 300;
