--- a/css/style.css
+++ b/css/style.css
@@ -12,16 +12,28 @@ body{
   font-family: "Open Sans", sans-serif;
 }
 
-header h1{
-  text-shadow: 1px 0px 8px #000000;
+header{
+  max-height: 95vh;
+  position: relative;
+}
+
+header::after{
+  content: "";
+  position: absolute;
+  background-color: #000000;
+  opacity: 0.4;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+header h1 span {
+  color: #b14c1d;
 }
 
 header p{
   margin: 20px 0 20px 0;
-}
-
-header h1 span {
-  color: #A0522D;
 }
 
 h1, h2, h3 {
